# itertools-cxx

./: .clang-format  .drone.yml  .gitignore  .woodpecker.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml
.woodpecker/: .build.yml  .test.yml  test.yaml  test.yml
itertools/: basic.hxx  enumerate.hxx  filter.hxx  iterator.hxx  itertools.hxx  map.hxx  optional.hxx  types.hxx  zip.hxx
tests/: enumerate.cxx  filter.cxx  itertools.cxx  map.cxx  zip.cxx
